# structstream

./: .gitignore  CMakeLists.txt  README.rst
docs/: Makefile  conf.py  format.rst  index.rst
docs/notes/: stream-concept.md
examples/: person.cpp
include/: strstr_errors.hpp  strstr_io.hpp  strstr_nodes.hpp  strstr_reader.hpp  strstr_registry.hpp  strstr_static.hpp  strstr_utils.hpp  strstr_writer.hpp  structstream.hpp
src/: deserializer.cpp  errors.cpp  hashing.cpp  hashing_base.cpp  hashing_gnutls.cpp  idpath.cpp  io.cpp  io_base.cpp  io_hash.cpp  io_memory.cpp  io_std.cpp  iterators.cpp  node_base.cpp  node_blob.cpp  node_container.cpp  node_primitive.cpp  node_varint.cpp  nodes.cpp  reader.cpp  registry.cpp  serialize.cpp  serialize_base.cpp  serializer.cpp  streaming.cpp  streaming_base.cpp  streaming_bitstream.cpp  streaming_sinks.cpp  streaming_tree.cpp  streaming_utils.cpp  strstr_errors.cpp  strstr_io.cpp  strstr_nodes.cpp  strstr_reader.cpp  strstr_registry.cpp  strstr_utils.cpp  strstr_writer.cpp  structstream.cpp  utils.cpp  writer.cpp
structstream/: deserializer.hpp  errors.hpp  hashing.hpp  hashing_base.hpp  hashing_gnutls.hpp  idpath.hpp  io.hpp  io_base.hpp  io_hash.hpp  io_memory.hpp  io_std.hpp  iterators.hpp  node_base.hpp  node_blob.hpp  node_container.hpp  node_factory.hpp  node_primitive.hpp  node_varint.hpp  nodes.hpp  reader.hpp  registry.hpp  serialize.hpp  serialize_base.hpp  serialize_iterables.hpp  serialize_struct.hpp  serialize_utils.hpp  serializer.hpp  static.hpp  streaming.hpp  streaming_base.hpp  streaming_bitstream.hpp  streaming_sinks.hpp  streaming_tree.hpp  streaming_utils.hpp  structstream.hpp  utils.hpp  writer.hpp
tests/: decode_container.cpp  decode_enum.cpp  decode_failures.cpp  decode_forgiving.cpp  decode_misc.cpp  decode_record.cpp  decode_varint.cpp  deserialize.cpp  encode_container.cpp  encode_enum.cpp  encode_record.cpp  encode_varint.cpp  hashing.cpp  idpath_find_most_shallow.cpp  iterators.cpp  main.cpp  model.cpp  record_decode.cpp  serialize.cpp  utils.hpp
